--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -40,6 +40,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath:aayush/neupane/me/web/config/dao-context.xml
+			classpath:aayush/neupane/me/web/config/service-context.xml
 		</param-value>
 	</context-param>
 </web-app>
