--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 hs_err_pid*
 target/m2e-wtp/web-resources/META-INF/maven/me.aayush.neupane/offers/pom.properties
 target/m2e-wtp/web-resources/META-INF/maven/me.aayush.neupane/offers/pom.properties
+test/aayush/neupane/me/web/test/config/jdbc.properties
+target/m2e-wtp/web-resources/META-INF/maven/me.aayush.neupane/offers/pom.properties
